# leadcord

./: .gitignore  README.md  a  build.ps1  finalize.ps1  package.json  pnpm-lock.yaml  publish  publish.ps1  toolchains.txt  ver.js
.github/workflows/: publish.yml
another/: index.pb  metadata.json
check/: index.pb  metadata.json
check/handlers/: message.mod.pb  ready.mod.pb
leadcord/: Cargo.toml
leadcord/src/: handler.rs  lib.rs
leadcord/src/context/: mod.rs
leadcord/src/handlers/: mod.rs
leadcord/src/message/: get.rs  mod.rs
leadcord/src/onready/: get.rs  mod.rs  ready.rs
