[package]
name = "leadcord"
version = "0.0.7"
edition = "2024"
authors = ["AHQ Softwares"]
keywords = ["discord", "leadlang", "package", "fast", "compiled"]
description = "Discord Bot Library in Lead Language"

[lib]
name = "leadcord"
crate-type = ["cdylib"]

[dependencies]
lead_lang_interpreter = { git = "https://github.com/leadlang/lead" }
lead_lang_macros = { git = "https://github.com/leadlang/lead" }
serenity = "0.12"

[patch.crates-io]
lead_lang_interpreter = { git = "https://github.com/leadlang/lead" }
